# BSC-FWI

./: .gitignore  README.md  run_example.sh  slurm.sh
0_cmake/: CMakeLists.txt  fwi_propagator.c  jobscript_sdv.pbs
0_version_openmp/: CMakeLists.txt  Makefile  environment_deep.sh  environment_knl.sh  environment_local.sh  environment_mn3.sh  environment_sdv.sh  extrae.xml  fwi_main.c  fwi_propagator.c  jobscript_mt.slurm  run_io.sh  run_io_extrae.sh
1_version_ompss/: .gitignore  CMakeLists.txt  Makefile  Makefile.ompSs  environment_local.sh  fwi_main.c  fwi_propagator.c
2_version_mpi/: .environment_local.sh.un~  .fwi_propagator.h.un~  .fwi_propagator_2.c.un~  .gitignore  CMakeLists.txt  Makefile  compile.sh  environment_local.sh  environment_mn3.sh  environment_sdv.sh  fwi_common.c  fwi_common.h  fwi_kernel.c  fwi_kernel.h  fwi_main.c  fwi_propagator.c  fwi_propagator.h  fwi_propagator.h~  fwi_propagator_2.c  fwi_propagator_2.c~  fwi_schedule.c  job.err  jobscript_mn3.lsf  jobscript_sdv.sh
2_version_mpi/Measures/MPI_2nodes_io/: job.err  job.out
2_version_mpi/Measures/MPI_2nodes_io_optimized/: fwi_params.txt  job.err  job.out
2_version_mpi/Measures/MPI_3nodes_io_optimized/: job.err  job.out
3_version_offload/: .gitignore  CMakeLists.txt  compile.sh  environment_mn3.sh  environment_sdv.sh  fwi_main.c  fwi_offload.c  fwi_offload.h  fwi_propagator.h  jobscript_sdv.sh  local.sh  mn3_x2x.lsf  sdv_x2x.pbs
4_version_offload_nvme/: CMakeLists.txt  Makefile  environment_mn3.sh  environment_sdv.sh  extrae.xml  fwi_main.c  fwi_offload.h  mn3_x2x.lsf  sdv_x2x.pbs
Scripts/: gcc_local.sh  gcc_mn3_openmp.sh  impi_mn3.sh  intel_mn3_openmp.sh  jobscript_mn3.tracing.lsf  offload_intel_mn3.sh  offload_mn3.sh
Scripts/extrae_configs/: extrae.omp.xml  extrae.xml  trace.omp.sh  trace.ompss.sh  trace.sh
SetupParams/: README.txt  fwi_frequencies.txt  fwi_params.txt  fwi_params.txt.singlenode  fwi_schedule.offload  fwi_schedule.offload_nvme  fwi_schedule.txt
SetupParams.bk/: fwi_params.txt  fwi_schedule.2nodes  fwi_schedule.txt
common/: .fwi_kernel.c.un~  fwi_common.c  fwi_common.h  fwi_comms.c  fwi_comms.h  fwi_constants.c  fwi_constants.h  fwi_generatemodel.c  fwi_kernel.c  fwi_kernel.c~  fwi_kernel.h  fwi_sched.c  fwi_sched.h  fwi_schedule.c
utils/: .environment_local.sh.un~  .gitignore  CMakeLists.txt  environment.sh  environment_knl.sh  environment_local.sh~  environment_sdv.sh  run.sh
